# src/controllers/municipio.controller.js
@@ -1,6 +1,9 @@
 const Municipio = require("../models/municipio")
 const PaginadoReq = require("../middlewares/openapi/schema/request/helper.request")
-const getMunicipioReq = require("../middlewares/openapi/schema/request/municipio.request")
+const {
+  getMunicipioReq,
+  getMunicipioUbicacionReq,
+} = require("../middlewares/openapi/schema/request/municipio.request")
 const { validateReq, validateRes } = require("../utils/helper.util")
 
 const getMunicipios = (req, res, next) => {
@@ -27,4 +30,16 @@ const getMunicipio = (req, res, next) => {
     )
 }
 
-module.exports = { getMunicipios, getMunicipio }
+const getMunicipioUbicacion = (req, res, next) => {
+  validateReq(req.query, getMunicipioUbicacionReq)
+    .then((validated) => Municipio.getMunicipioUbicacion({ query: validated }))
+    .then((municipio) => res.send(municipio))
+    .catch(
+      (errorHandler = (err) => {
+        console.log("ERROR: ", err.message)
+        next()
+      })
+    )
+}
+
+module.exports = { getMunicipios, getMunicipio, getMunicipioUbicacion }
