# src/middlewares/openapi/schema/request/municipio.request.js
@@ -4,4 +4,9 @@ const getMunicipioReq = Joi.object({
   munid: Joi.number().min(1).max(3000).required(),
 })
 
-module.exports = getMunicipioReq
+const getMunicipioUbicacionReq = Joi.object({
+  latitud: Joi.number().required(),
+  longitud: Joi.number().required(),
+})
+
+module.exports = { getMunicipioReq, getMunicipioUbicacionReq }
